--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <title>Frontend Mentor | Interactive rating component</title>
-  <link rel="stylesheet" href="styles/style.css">
-  <link rel="stylesheet" href="styles/mediaqueries.css">
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="mediaqueries.css">
 </head>
 <body>
   <div class="container" id="container">
@@ -15,7 +15,7 @@
                  <div class="box2" id="box2">
 
                    <div class="illustration">
-                     <img src="/images/illustration-thank-you.svg" alt="illustration">
+                     <img src="illustration-thank-you.svg" alt="illustration">
                    </div>
 
                    <div class="rate">
@@ -34,7 +34,7 @@
     <div class="box">
 
       <div class="star">
-        <img src="/images/icon-star.svg" alt="Rating Icon">
+        <img src="icon-star.svg" alt="Rating Icon">
       </div>
 
       <div class="content">
